...
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvlanguage"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imgMovies"
            app:layout_constraintTop_toBottomOf="@+id/tvRuntime" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
...
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRating" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvrating"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProduction" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
...
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvproduction"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWriter" />

        <TextView
            android:id="@+id/tvProduction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
...
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvwriter"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDirector" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvdirector"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStars" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
...
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
...
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvruntime"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imgMovies"
            app:layout_constraintTop_toBottomOf="@+id/tvRelease" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/language"
            android:textColor="@color/white"
...
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvrelease"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imgMovies"
            app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

        <TextView
            android:id="@+id/tvRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
...
            app:layout_collapseMode="parallax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/karla_bold"
...
            android:text="@string/tvgenre"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imgMovies"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="115dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/todo"
            android:fitsSystemWindows="true"
            android:scaleType="center"
...
            android:layout_height="130dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:fitsSystemWindows="true"
            android:scaleType="center"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toStartOf="@+id/img3"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMovies" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
...
