...
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/karla_variablefont"
            android:text="@string/tvlanguage"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imgSeries"
            app:layout_constraintTop_toBottomOf="@+id/tvEpisodes" />

        <TextView
            android:id="@+id/tvEpisodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
...
            android:text="@string/tvproducer"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStars" />

        <TextView
            android:id="@+id/tvProducer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/karla_variablefont"
...
